--- a/index.html
+++ b/index.html
@@ -174,9 +174,7 @@
           </div>
         </div>
       </section>
-      <p class="last-text">
-        Copyright &#169; 2020 Occuppy Inc. All Rights Reserved
-      </p>
+      <p class="last-text">Copyright 2020 Occuppy Inc. All Rights Reserved</p>
     </footer>
   </body>
 </html>
