--- a/index.html
+++ b/index.html
@@ -36,8 +36,12 @@
         </button>
         <div class="three">About</div>
         <div class="four">Help</div>
-        <div class="five"><a href="/listing.html">Login</a></div>
-        <button class="signup-button"><div class="six">Signup</div></button>
+        <div class="five"><a href="/login.html">Login</a></div>
+        <a href="signup.html">
+          <button class="signup-button">
+            <div class="six">Signup</div>
+          </button></a
+        >
       </div>
     </div>
     <div class="cover-image">
