--- a/listing4.html
+++ b/listing4.html
@@ -33,7 +33,7 @@
       </div>
       <div class="nav-about">About</div>
       <div class="nav-help">Help</div>
-      <div class=""><img src="page2/images/heart.svg" /></div>
+      <div class="heart"><img src="page2/images/heart.svg" /></div>
       <div><img class="bavbar-user" src="page3/user-image.jpg" /></div>
     </section>
     <p class="label">Executive Room(s) at Autumn Loch Hotel</p>
