--- a/listing.html
+++ b/listing.html
@@ -64,7 +64,7 @@
       <div class="card">
         <div class="card-image image1"></div>
         <div class="down-text">
-          <p class="a">Autumn Loch Hotel</p>
+          <p class="a"><a href="listing2.html">Autumn Loch Hotel</a></p>
           <p class="b">from &#8373;170/night</p>
           <p class="c">
             7 Baradu, Osu, Accra <i class="ri-hotel-bed-fill"></i>2
@@ -86,7 +86,7 @@
       <div class="card">
         <div class="card-image image3"></div>
         <div class="down-text">
-          <p class="a">Autumn Loch Hotel</p>
+          <p class="a"><a href="listing2.html">Autumn Loch Hotel</a></p>
           <p class="b">from &#8373;170/night</p>
           <p class="c">
             7 Baradu, Osu, Accra <i class="ri-hotel-bed-fill"></i>2
@@ -97,7 +97,7 @@
       <div class="card">
         <div class="card-image image4"></div>
         <div class="down-text">
-          <p class="a">Autumn Loch Hotel</p>
+          <p class="a"><a href="listing2.html">Autumn Loch Hotel</a></p>
           <p class="b">from &#8373;170/night</p>
           <p class="c">
             7 Baradu, Osu, Accra <i class="ri-hotel-bed-fill"></i>2
@@ -108,7 +108,7 @@
       <div class="card">
         <div class="card-image image5"></div>
         <div class="down-text">
-          <p class="a">Autumn Loch Hotel</p>
+          <p class="a"><a href="listing2.html">Autumn Loch Hotel</a></p>
           <p class="b">from &#8373;170/night</p>
           <p class="c">
             7 Baradu, Osu, Accra <i class="ri-hotel-bed-fill"></i>2
@@ -119,7 +119,7 @@
       <div class="card">
         <div class="card-image image1"></div>
         <div class="down-text">
-          <p class="a">Autumn Loch Hotel</p>
+          <p class="a"><a href="listing2.html">Autumn Loch Hotel</a></p>
           <p class="b">from &#8373;170/night</p>
           <p class="c">
             7 Baradu, Osu, Accra <i class="ri-hotel-bed-fill"></i>2
@@ -130,7 +130,7 @@
       <div class="card">
         <div class="card-image image5"></div>
         <div class="down-text">
-          <p class="a">Autumn Loch Hotel</p>
+          <p class="a"><a href="listing2.html">Autumn Loch Hotel</a></p>
           <p class="b">from &#8373;170/night</p>
           <p class="c">
             7 Baradu, Osu, Accra <i class="ri-hotel-bed-fill"></i>2
@@ -141,7 +141,7 @@
       <div class="card">
         <div class="card-image image1"></div>
         <div class="down-text">
-          <p class="a">Autumn Loch Hotel</p>
+          <p class="a"><a href="listing2.html">Autumn Loch Hotel</a></p>
           <p class="b">from &#8373;170/night</p>
           <p class="c">
             7 Baradu, Osu, Accra <i class="ri-hotel-bed-fill"></i>2
@@ -152,7 +152,7 @@
       <div class="card">
         <div class="card-image image4"></div>
         <div class="down-text">
-          <p class="a">Autumn Loch Hotel</p>
+          <p class="a"><a href="listing2.html">Autumn Loch Hotel</a></p>
           <p class="b">from &#8373;170/night</p>
           <p class="c">
             7 Baradu, Osu, Accra <i class="ri-hotel-bed-fill"></i>2
@@ -163,7 +163,7 @@
       <div class="card">
         <div class="card-image image1"></div>
         <div class="down-text">
-          <p class="a">Autumn Loch Hotel</p>
+          <p class="a"><a href="listing2.html">Autumn Loch Hotel</a></p>
           <p class="b">from &#8373;170/night</p>
           <p class="c">
             7 Baradu, Osu, Accra <i class="ri-hotel-bed-fill"></i>2
@@ -174,7 +174,7 @@
       <div class="card">
         <div class="card-image image4"></div>
         <div class="down-text">
-          <p class="a">Autumn Loch Hotel</p>
+          <p class="a"><a href="listing2.html">Autumn Loch Hotel</a></p>
           <p class="b">from &#8373;170/night</p>
           <p class="c">
             7 Baradu, Osu, Accra <i class="ri-hotel-bed-fill"></i>2
@@ -185,7 +185,7 @@
       <div class="card">
         <div class="card-image image5"></div>
         <div class="down-text">
-          <p class="a">Autumn Loch Hotel</p>
+          <p class="a"><a href="listing2.html">Autumn Loch Hotel</a></p>
           <p class="b">from &#8373;170/night</p>
           <p class="c">
             7 Baradu, Osu, Accra <i class="ri-hotel-bed-fill"></i> 2
