--- a/index.html
+++ b/index.html
@@ -26,6 +26,13 @@
       href="https://fonts.googleapis.com/css2?family=Inter&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="bootstrap-4.6.2-dist/css/bootstrap.css" />
+    <link rel="stylesheet" href="bootstrap-4.6.2-dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="bootstrap-4.6.2-dist/css/bootstrap-grid.css" />
+    <link
+      rel="stylesheet"
+      href="bootstrap-4.6.2-dist/css/bootstrap-grid.min.css"
+    />
   </head>
   <body>
     <div class="header">
