--- a/listing.html
+++ b/listing.html
@@ -18,6 +18,10 @@
       href="https://fonts.googleapis.com/css2?family=Abel&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
+    />
   </head>
   <body>
     <section class="navbar-section">
