--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
     <div class="cover-image">
       <div class="new-div">
         <img class="cover-img" src="image/bg-img.png" />
+        <img class="mobi-bg-image" src="mob.bg-img.png" alt="" />
         <p class="discover-text">Discover Hostels Today</p>
         <input class="search-bar" type="text" placeholder="Search Anywhere " />
         <button class="search-location-button">Search Location</button>
