--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     />
   </head>
   <body>
-    <nav class="header">
+    <!--<nav class="header">
       <div class="one"><img src="image/primary.svg" /></div>
       <div class="together">
         <button class="list-property-button">
@@ -44,7 +44,7 @@
           </button>
         </a>
       </div>
-    </nav>
+    </nav>-->
     <nav class="main-nav">
       <div class="logo"><img src="image/primary.svg" /></div>
       <div class="nav-items-container">
@@ -59,7 +59,7 @@
     <div class="cover-image">
       <div class="new-div">
         <img class="cover-img" src="image/bg-img.png" />
-        <img class="mobi-bg-image" src="mob.bg-img.png" alt="" />
+        <!--<img class="mobi-bg-image" src="mob.bg-img.png" alt="" />-->
         <p class="discover-text">Discover Hostels Today</p>
         <input class="search-bar" type="text" placeholder="Search Anywhere " />
         <button class="search-location-button">Search Location</button>
